@@ -1,22 +1,19 @@
+AUTOMAKE_OPTIONS = foreign
 SUBDIRS = intl m4 po src icons
-
 EXTRA_DIST = config.rpath  AUTHORS COPYING ChangeLog INSTALL \
 README TODO touchall ABOUT-NLS po/tr.po_full po/pt.po_full \
-po/nonascii.pl ltris128.png ltris.desktop.in \
+po/nonascii.pl ltris48.png ltris.desktop \
 CROSSCOMPILE ltris.appdata.xml
 
-desktopdir = $(datadir)/applications
-desktop_DATA = ltris.desktop
-icondir = $(datadir)/icons
-icon_DATA = ltris128.png
+install-data-local:
+	$(mkinstalldirs) $(DESTDIR)$(datadir)/icons/hicolor/48x48/apps
+	$(mkinstalldirs) $(DESTDIR)$(datadir)/applications
+	$(INSTALL_DATA) ltris48.png $(DESTDIR)$(datadir)/icons/hicolor/48x48/apps/ltris.png
+	$(INSTALL_DATA) ltris.desktop $(DESTDIR)$(datadir)/applications
+	
 
-AUTOMAKE_OPTIONS = foreign
-
-# We can't use static desktop file because of icon location. Is this 
-# the right way to handle it? At least it works... as long as $datadir
-# does not contain plus signs. :-)
-ltris.desktop:
-	@sed -e "s+Icon=+Icon=$(datadir)/icons/ltris128.png+" \
-	< ltris.desktop.in > ltris.desktop
+uninstall-local:
+	rm $(DESTDIR)$(datadir)/icons/hicolor/48x48/apps/ltris.png
+	rm $(DESTDIR)$(datadir)/applications/ltris.desktop
 
 ACLOCAL_AMFLAGS = -I m4
