@@ -1,3 +1,5 @@
+- properly install icons (2023/02/03 MS)
+
 1.2.6:
 - reset lock delay on hold (2022/10/02 Miroslav Lichvar)
 
